CMAKE_MINIMUM_REQUIRED(VERSION 3.12.0)
PROJECT(MojoShaderAssembler)

# !!! FIXME: can we lowercase this file, if nothing else?

# FIXME: Properly include MojoShader CMakeLists...
INCLUDE_DIRECTORIES(. mojoshader)

# This was a Mercurial thing. In Git, it's always -1.
SET(MOJOSHADER_ASSEMBLER_VERSION -1)

# If Git is installed and we are in a git repository, include the changeset as version information.
FIND_PROGRAM(GIT git DOC "Path to git command line app: https://git-scm.com/")
IF(NOT GIT)
    MESSAGE(STATUS "Git not found. You can go on, but version info will be wrong.")
    SET(MOJOSHADER_ASSEMBLER_CHANGESET "???")
ELSE(NOT GIT)
    MARK_AS_ADVANCED(GIT)

    # !!! FIXME: this didn't actually use the GIT variable...

    # See if we are in a git repository.
    EXECUTE_PROCESS(
        COMMAND git rev-parse --show-toplevel
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
        OUTPUT_VARIABLE MOJOSHADER_ASSEMBLER_GIT_TOPLEVEL_DIR
        RESULT_VARIABLE GITVERSION_RC
        ERROR_QUIET
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    IF(NOT GITVERSION_RC EQUAL 0)
        MESSAGE(STATUS "Git repository not found. You can go on, but version info will be wrong.")
        SET(MOJOSHADER_ASSEMBLER_CHANGESET "???")
    ELSE(NOT GITVERSION_RC EQUAL 0)
        # Query the changeset.
        EXECUTE_PROCESS(
            COMMAND git rev-list HEAD~..
            WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
            RESULT_VARIABLE GITVERSION_RC
            OUTPUT_VARIABLE MOJOSHADER_ASSEMBLER_GIT_CHANGESET
            ERROR_QUIET
            OUTPUT_STRIP_TRAILING_WHITESPACE
        )
        IF(NOT GITVERSION_RC EQUAL 0)
            SET(MOJOSHADER_ASSEMBLER_CHANGESET "???")
        ELSE(NOT GITVERSION_RC EQUAL 0)
            SET(MOJOSHADER_ASSEMBLER_CHANGESET "git-${MOJOSHADER_ASSEMBLER_GIT_CHANGESET}")
        ENDIF(NOT GITVERSION_RC EQUAL 0)
    ENDIF(NOT GITVERSION_RC EQUAL 0)
ENDIF(NOT GIT)

WRITE_FILE(
    "${CMAKE_CURRENT_SOURCE_DIR}/mojoshader_assembler_version.h"
    "/* This file was autogenerated. Do not edit! */\n"
    "#ifndef _INCL_MOJOSHADER_ASSEMBLER_VERSION_H_\n"
    "#define _INCL_MOJOSHADER_ASSEMBLER_VERSION_H_\n"
    "#define MOJOSHADER_ASSEMBLER_VERSION ${MOJOSHADER_ASSEMBLER_VERSION}\n"
    "#define MOJOSHADER_ASSEMBLER_CHANGESET \"${MOJOSHADER_ASSEMBLER_CHANGESET}\"\n"
    "#endif\n"
)

IF(CMAKE_COMPILER_IS_GNUCC)
    ADD_DEFINITIONS(-Wall -ggdb3)
ENDIF(CMAKE_COMPILER_IS_GNUCC)

IF(MSVC)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS=1)
    ADD_DEFINITIONS(-TP)  # force .c files to compile as C++.
ENDIF(MSVC)

ADD_LIBRARY(mojoshader_assembler
    mojoshader_assembler_common.c
    mojoshader_preprocessor.c
    mojoshader_lexer.c
    mojoshader_assembler.c
)

FIND_PROGRAM(RE2C re2c DOC "Path to re2c command line app: http://re2c.org/")
IF(NOT RE2C)
    MESSAGE(STATUS "re2c missing. You can go on, but can't rebuild the lexer.")
ELSE(NOT RE2C)
    MARK_AS_ADVANCED(RE2C)
    ADD_CUSTOM_COMMAND(
        OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/mojoshader_lexer.c"
        DEPENDS mojoshader_lexer.re
        COMMAND "${RE2C}"
        ARGS -is --no-generation-date -o "${CMAKE_CURRENT_SOURCE_DIR}/mojoshader_lexer.c" "${CMAKE_CURRENT_SOURCE_DIR}/mojoshader_lexer.re"
    )
ENDIF(NOT RE2C)

# FIXME: Properly include MojoShader CMakeLists...
ADD_DEFINITIONS(
    -DMOJOSHADER_NO_VERSION_INCLUDE
    -DSUPPORT_PROFILE_D3D=0
    -DSUPPORT_PROFILE_HLSL=0
    -DSUPPORT_PROFILE_GLSL120=0
    -DSUPPORT_PROFILE_GLSLES=0
    -DSUPPORT_PROFILE_GLSLES3=0
    -DSUPPORT_PROFILE_GLSL=0
    -DSUPPORT_PROFILE_ARB1=0
    -DSUPPORT_PROFILE_ARB1_NV=0
    -DSUPPORT_PROFILE_METAL=0
    -DSUPPORT_PROFILE_SPIRV=0
    -DSUPPORT_PROFILE_GLSPIRV=0
)
ADD_EXECUTABLE(finderrors utils/finderrors.c mojoshader/mojoshader.c mojoshader/mojoshader_common.c mojoshader/profiles/mojoshader_profile_common.c mojoshader/profiles/mojoshader_profile_bytecode.c)

# FIXME: Properly include MojoShader CMakeLists...
#find_package(SDL2)
IF(SDL2_FOUND)
    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(finderrors mojoshader_assembler ${SDL2_LIBRARIES} ${LIBM} ${LOBJC} ${CARBON_FRAMEWORK})
    SET_SOURCE_FILES_PROPERTIES(
        utils/finderrors.c
        PROPERTIES COMPILE_FLAGS "-DFINDERRORS_COMPILE_SHADERS=1"
    )
ELSE(SDL2_FOUND)
    TARGET_LINK_LIBRARIES(finderrors mojoshader_assembler)
ENDIF(SDL2_FOUND)

# End of CMakeLists.txt ...

